<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SenderActivity">

    <TextView
        android:id="@+id/tvSenderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sender_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSenderDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sender_description"
        android:textAlignment="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvSenderTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status_waiting"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:background="#F5F5F5"
        app:layout_constraintTop_toBottomOf="@id/tvSenderDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnStartMirroring"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_mirroring"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnStopMirroring"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_mirroring"
        android:enabled="false"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnStartMirroring"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAccessibilityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remote_control_title"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/btnStopMirroring"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAccessibilityDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remote_control_description"
        android:textAlignment="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvAccessibilityTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAccessibilitySettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enable_accessibility"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvAccessibilityDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
